Adecuacion de combo box

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Web02v01EvaluacionJsp/build/
 /Web02v01EvaluacionJsp/dist/
 /AEMJWBEVL0401v01EvaluacionJSTL/nbproject/private/
+/AEMJSEEVL0301v01EvaluacionJava-JDK8/build/
