--- a/AEMJSEEVL0301v01EvaluacionJava-JDK8/nbproject/private/private.properties
+++ b/AEMJSEEVL0301v01EvaluacionJava-JDK8/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
