--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ build/
 /03Develop/AEMJSEEVL0201v01EvaluacionJavaIO-JDK8/dist/
 /03Develop/AEMJSEEVL0401v01EvaluacionJavaUTIL-JDK8/dist/
 /03Develop/AEMJSEEVL0501v01EvaluacionJavaLANG-JDK8/dist/
+/03Develop/BVAJWBEVL0201v01JSPagination/dist/
