TAL008 Change Analisis and code

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ build/
 /03Develop/BVAJWBEVL0201v01JSPagination/dist/
 /03Develop/JFSADS-E2-TAL005RandomNumber/target/
 /03Develop/JFSADS-E02-TAL005RandomNumber/target/
+/03Develop/JFSFSI-SSN04-TAL008Covid19/target/
