Evaluacion de superficie

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ build/
 /03Develop/JFSADS-E2-TAL005RandomNumber/target/
 /03Develop/JFSADS-E02-TAL005RandomNumber/target/
 /03Develop/JFSFSI-SSN04-TAL008Covid19/target/
+/03Develop/JFSFSI-SSN08-TAL062AreaLateralSuperficie/target/
