--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ build/
 /03Develop/JFSADS-E02-TAL005RandomNumber/target/
 /03Develop/JFSFSI-SSN04-TAL008Covid19/target/
 /03Develop/JFSFSI-SSN08-TAL062AreaLateralSuperficie/target/
+/03Develop/JFSADS-E08-TAL062AreaLateralSuperficie/target/
