--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ build/
 /03Develop/JFSFSI-SSN08-TAL062AreaLateralSuperficie/target/
 /03Develop/JFSADS-E08-TAL062AreaLateralSuperficie/target/
 /03Develop/AEMJSEEVL1001v01EvaluationSwingWithJDK8/target/
+/03Develop/JFSFSI-SSN10-TAL030RetiroAfpArrayList/target/
