--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ build/
 /03Develop/JFSADS-E08-TAL062AreaLateralSuperficie/target/
 /03Develop/AEMJSEEVL1001v01EvaluationSwingWithJDK8/target/
 /03Develop/JFSFSI-SSN10-TAL030RetiroAfpArrayList/target/
+/03Develop/JFSFSI-SSN11-TAL031RetiroAfpLinkedList/target/
+/03Develop/JFSFSI-SSN12-TAL032RetiroAfpStack/target/
